--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 html, body {
     height: 100%;
     padding: 0;
-    background-color: #EEEEEE;  
+    background-color: rgb(3, 172, 59);  
     
     color: #303030;
     font: Verdana, Arial, Sans-Serif;
