--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@
 html, body {
     height: 100%;
     padding: 0;
-    background-color: rgb(3, 172, 59);  
+    background-color: rgb(0, 161, 35);  
     
-    color: #303030;
+    color: #000000;
     font: Verdana, Arial, Sans-Serif;
 }
 
@@ -23,7 +23,7 @@ article {
 
 
 header {
-    color: skyblue;
+    color: rgb(255, 255, 255);
     text-align: center;
 }
 
