--- a/style.css
+++ b/style.css
@@ -1,17 +1,19 @@
 /* Basislayout */
+@keyframes fadeIn {
+    0% {opacity:0;}
 
+    100% {opacity:1;}
+}
+
+ .fadeIn { 
+    animation:fadeIn 5s;
+}
 html, body {
     height: 100%;
     padding: 0;
-<<<<<<< HEAD
     background-color: rgb(13, 83, 129);  
     
     color: #fcfcfc;
-=======
-    background-color: #EEEEEE;  
-    
-    color: #303030;
->>>>>>> fc456fbb3dfd947abaa871e3e6f0409152951c65
     font: Verdana, Arial, Sans-Serif;
 }
 
@@ -22,7 +24,6 @@ main {
     position: relative;
 }
 
-<<<<<<< HEAD
 article {
     text-align: justify;
     margin: 0 auto;
@@ -30,26 +31,12 @@ article {
 
 header {
     color: rgb(255, 255, 255);
-=======
-
-article {
-    text-align: justify;
-}
-
-
-header {
-    color: skyblue;
->>>>>>> fc456fbb3dfd947abaa871e3e6f0409152951c65
     text-align: center;
 }
 
 
 footer {
-<<<<<<< HEAD
     text-align: auto;
-=======
-    text-align: center;
->>>>>>> fc456fbb3dfd947abaa871e3e6f0409152951c65
     padding-bottom: 10px;
 }
 
@@ -59,24 +46,19 @@ footer {
 img.zweefLinks {
     float: left;
     margin-right: 15px;
-<<<<<<< HEAD
-    height: 200px ;
+    width: 290px;
 }
 img.zweefrechts {
     float: right;
     margin-left:15px;
-    height:240px;
+    height:140px;
 }
-img.zweefvoor {
-    float:right ;
-    margin-left:15px;
-    height:150;
-}
+
 img.zweefachter {
     float: right;
     margin-left:15px;
     height:250px;
-    width: 300px;
+    width: 330px;
     margin-top:20px;
 }
 img.zweefboven {
@@ -87,12 +69,10 @@ img.zweefboven {
 img.zweefin {
     float:left;
     margin-right: 15px;
-    width: 235px;
-}
-=======
+    width: 350px;
 }
 
->>>>>>> fc456fbb3dfd947abaa871e3e6f0409152951c65
+
 .smalltext {
     font-size: 0.7em;
 }
@@ -114,6 +94,7 @@ nav ul {
     padding: 0;
     background-color: #dddddd;
     overflow: hidden;
+    border: 5px solid rgb(0, 0, 0); 
 }
 
 nav ul li {
@@ -136,6 +117,9 @@ nav li a.active {
     background-color: skyblue;
 }
 
+.tekst {
+font-family:arial;
 
+}
 
 
